# scree

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  module.nix  shell.nix
scripts/: reset_database.zsh
src/: cfg.rs  cli.rs  cmd.rs  db.rs  lib.rs  main.rs  ping.rs
src/cmd/: alert.rs  migrate.rs  ping.rs  run.rs
src/cmd/run/: alert.rs  deadline_watcher.rs  http.rs  reload.rs  report.rs
src/db/: alert.rs  config.rs  notifications.rs  ping.rs  util.rs
src/util/: into_result.rs  signal.rs
templates/: dashboard.html
