[package]
name = "scree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["now"] }
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
