[package]
name = "scree"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["now"] }
clap = { version = "4.5.30", features = ["derive"] }
comfy-table = "7.1.4"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
humantime = "2.1.0"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
postgres-types = { version = "0.2.9", features = ["derive", "with-chrono-0_4"] }
reqwest = "0.12.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.17", features = ["signal"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4"] }
